--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "jest": "^26.0.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
-    "pg": "^8.2.1"
+    "pg": "^8.2.1",
+    "react-router-dom": "^6.4.3"
   }
 }
